# backend/openapi/swagger.json
@@ -2000,6 +2000,51 @@
                 }
             }
         },
+        "/updateWorkspace/": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "Update the workspace",
+                "parameters": [
+                    {
+                        "description": "Workspace state",
+                        "name": "state",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/server.getUpdateWorkspace.request"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.updateWorkspace"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.updateWorkspace"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.updateWorkspace"
+                        }
+                    }
+                }
+            }
+        },
         "/workspaces/": {
             "get": {
                 "produces": [
@@ -3108,6 +3153,20 @@
                 }
             }
         },
+        "server.getUpdateWorkspace.request": {
+            "type": "object",
+            "properties": {
+                "currentState": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/workspace.FrontendGraphNode"
+                    }
+                },
+                "workspaceUID": {
+                    "type": "string"
+                }
+            }
+        },
         "server.getWorkspaceReply": {
             "type": "object",
             "properties": {
@@ -3292,6 +3351,14 @@
                 },
                 "session_count": {
                     "type": "integer"
+                }
+            }
+        },
+        "server.updateWorkspace": {
+            "type": "object",
+            "properties": {
+                "ts": {
+                    "type": "string"
                 }
             }
         },
